Set configuration for monorepo packages

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "frontend",
-  "private": true,
-  "version": "0.0.0",
+  "name": "@my-task-board/frontend",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "echo \"Error: no test specified in frontend\" && exit 1"
   },
   "dependencies": {
     "react": "^19.1.0",
