--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "backend",
+  "name": "@my-task-board/backend",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/app.js",
     "dev": "ts-node src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified in backend\" && exit 1"
   },
   "keywords": [],
   "author": "",
