--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -14,12 +14,17 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "debug": "^4.4.1",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "pg": "^8.16.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
+    "@types/debug": "^4.1.12",
     "@types/express": "^5.0.1",
     "@types/node": "^22.15.18",
+    "@types/pg": "^8.15.2",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
