Implemented joi validation with boom error handling

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dev": "npm run dev --workspaces"
   },
   "dependencies": {
+    "@hapi/boom": "^10.0.1",
     "@my-task-board/backend": "1.0.0",
     "@my-task-board/frontend": "1.0.0"
   },
