--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,8 +10,10 @@
     "test": "echo \"Error: no test specified in frontend\" && exit 1"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.11",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
